objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Department__c</fullName>
        <formula>Owner:User.Department</formula>
        <label>Assigned Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Location__c</fullName>
        <formula>TEXT(Owner:User.Location__c)</formula>
        <label>Assigned Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_User_ID__c</fullName>
        <formula>IF (Owner:User.Id = $User.Id,1,0)</formula>
        <label>Assigned User ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BH_Legacy_Id__c</fullName>
        <defaultValue>&quot;-12&quot;</defaultValue>
        <description>Used as Legacy ID from bullhorn</description>
        <externalId>true</externalId>
        <label>BH Legacy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Reschedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel/Reschedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckOutAccuracy__c</fullName>
        <label>Check Out Accuracy (m)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckOutDate__c</fullName>
        <label>Check Out Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CheckOutDistanceFromRecordMi__c</fullName>
        <label>Check Out Distance From Record (mi)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckOutLatitude__c</fullName>
        <label>Check Out Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckOutLongitude__c</fullName>
        <label>Check Out Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedLatitude__c</fullName>
        <label>Created Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedLocationAccuracy__c</fullName>
        <label>Created Location Accuracy (m)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedLocationVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Location Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedLongitude__c</fullName>
        <label>Created Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistanceFromRecordMi__c</fullName>
        <label>Distance from Record (mi)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMP_Legacy_Id__c</fullName>
        <defaultValue>&quot;-14&quot;</defaultValue>
        <description>Legacy Id from FMP system</description>
        <externalId>true</externalId>
        <label>FMP_Legacy_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Location__c</fullName>
        <label>Interview Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
                <value>
                    <fullName>East Bay</fullName>
                </value>
                <value>
                    <fullName>Silicon Valley</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participants__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participants</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Duration__c</fullName>
        <description>Last Modified Date minus Created Date</description>
        <formula>( LastModifiedDate  -  CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_Formula__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Lapse__c</fullName>
        <formula>( LastModifiedDate  -  CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Lapse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_reporting__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_ID_Formula__c</fullName>
        <formula>IF(  OwnerId = $User.Id,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User ID Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>groove_sent_from_flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Groove Sent From Flow</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>